syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "HolaProto";

package myservice; 

service MyService  {
    rpc MyMethod (MyRequest) returns (MyResponse){}
}

message MyRequest {
    string name = 1;
}

message MyResponse {
    string message = 1;
}